fixed the countdown alignment issue, made a working tally array, reoriented the choice box

--- a/rock-paper-scissors/style.css
+++ b/rock-paper-scissors/style.css
@@ -59,6 +59,7 @@ img {
 /* LANDING SCREEN */
 
 .landing-screen {
+	position: relative;
 	width: 100%;
 	display: block;
 	margin: 0px;
@@ -66,12 +67,20 @@ img {
 }
 
 .choice-box {
+	display: flex;
+	align-items: center;
+	position: absolute;
+	/* margin-left: 20%; */
 	width: 100%;
-	margin-top: 10px;
+	height: 100%;
+	z-index: 1;
+	/* max-width: 670vh; */
+	/* max-height: 150px; */
+	/* margin-top: 20%; */
 }
 
 .input {
-	display: inline;
+	display: block;
 	background-color: black;
 	font-family: "Arial";
     font-size: 0.5em;
@@ -93,10 +102,12 @@ img {
 
 .landing-bottom-container {
 	width: 100%;
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-end;
 	justify-content: right;
+	z-index: 10;
 	/* border: 1px red solid; */
 }
 
@@ -210,6 +221,7 @@ img {
 
 .countdown {
 	flex: 1;
+	flex-direction: column;
 	padding: 15px;
 	padding-top: 25px;
 	text-align: center;
@@ -252,6 +264,7 @@ img {
 	padding-top: 0px;
 	text-align: center;
 	font-size: 1.4em;
+	-webkit-text-stroke: 1px white;
 	/* text-shadow: white 2px 2px; */
 }
 
